--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,8 @@
     "outDir": "lib",
     "inlineSources": false,
     "noImplicitAny": true,
+    "strictNullChecks": false,
+    "noUnusedLocals": false,
 
     "typeRoots": [
       "./node_modules/@types",
